# http-request

./: Cargo.toml
src/: action.rs  app.rs  components.rs  input.rs  main.rs  request.rs  tui.rs  ui.rs
src/components/: method.rs  url.rs
src/http_client/: request.rs  response.rs
src/ui/: app.rs  event_handler.rs  renderer.rs  tui.rs  update.rs
