[package]
name = "http-request"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive", "color"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
ratatui = "0.24.0"
reqwest = { version = "0.11.22", features = ["json"] }
tokio = { version = "1.33.0", features = ["full"] }
futures = "0.3"
